--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.2",
+    "clsx": "^1.0.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-hooks": "^1.0.1",
     "react-scripts": "3.1.1",
+    "reactstrap": "^8.0.1",
     "recharts": "^1.7.1"
   },
   "scripts": {
