title and headings

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unicorn",
-  "homepage": "http://code-untapped.github.io/CU8_20190915",
+  "homepage": "https://code-untapped.github.io/CU8_20190915/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
